--- a/index.html
+++ b/index.html
@@ -5,9 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2</title>
 
+    <!-- Google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+    <!-- Fontawesome icon link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+    <header>
+        <!-- Navbar Section Start -->
+        <div class="navbar">
+            <div class="logo">
+                <img src="./assets/logo.png" alt="logo">
+            </div>
+            <div class="navitem">
+                <ul>
+                    <li class="Home"><a href="#">Home</a></li>
+                    <li class="Shop"><a href="#">Shop</a></li>
+                    <li class="About-us"><a href="#">About us</a></li>
+                    <li class="Cart"><a href="#"><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Navbar Section End -->
+
+        <!-- Banner Section Start -->
+        <section>
+            <div class="banner">
+              <div class="banner-content">
+                <h1 class="noto-serif">ALWAYS <span class="colour ">FRESH <br>FLOWERS</span></h1>
+                <p class="inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+              </div>
+              <div class="banner-img">
+                <img src="./assets/hero-flower.png" alt="Hero image">
+              </div>
+            </div>
+        </section>
+
+        <!-- Banner Section End -->
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
