--- a/index.html
+++ b/index.html
@@ -51,7 +51,97 @@
     </header>
 
     <main>
-
+        <!-- Plants section start -->
+        <section class="plants">
+            <div class="plant-content">
+                <h1 class="noto-serif "><span class="colour">Our</span> Plants</h1>
+                <p class="inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="plant-card">
+              
+                <div class="card card-1">
+                    <div class="card-img">
+                        <img src="./assets/sample-flower-image.png" alt="Flower image">
+                    </div>
+                    <div class="card-detailes">
+                        <h6 class="inter">Lily Blossom</h6>
+                        <h5 class="inter">20 USD</h5>
+                        <a href=""><button class="inter btn-primary">ADD TO CART</button></a>
+                    </div>
+                </div>
+                 <div class="card card-2">
+                    <div class="card-img">
+                        <img src="./assets/sample-flower-image.png" alt="Flower image">
+                    </div>
+                    <div class="card-detailes">
+                        <h6 class="inter">Lily Blossom</h6>
+                        <h5 class="inter">20 USD</h5>
+                        <a href=""><button class="inter btn-primary">ADD TO CART</button></a>
+                    </div>
+                </div>
+                 <div class="card card-3">
+                    <div class="card-img">
+                        <img src="./assets/sample-flower-image.png" alt="Flower image">
+                    </div>
+                    <div class="card-detailes">
+                        <h6 class="inter">Lily Blossom</h6>
+                        <h5 class="inter">20 USD</h5>
+                        <a href=""><button class="inter btn-primary">ADD TO CART</button></a>
+                    </div>
+                </div>
+                 <div class="card card-4">
+                    <div class="card-img">
+                        <img src="./assets/sample-flower-image.png" alt="Flower image">
+                    </div>
+                    <div class="card-detailes">
+                        <h6 class="inter">Lily Blossom</h6>
+                        <h5 class="inter">20 USD</h5>
+                        <a href=""><button class="inter btn-primary">ADD TO CART</button></a>
+                    </div>
+                </div>
+                 <div class="card card-5">
+                    <div class="card-img">
+                        <img src="./assets/sample-flower-image.png" alt="Flower image">
+                    </div>
+                    <div class="card-detailes">
+                        <h6 class="inter">Lily Blossom</h6>
+                        <h5 class="inter">20 USD</h5>
+                        <a href=""><button class="inter btn-primary">ADD TO CART</button></a>
+                    </div>
+                </div>
+                 <div class="card card-6">
+                    <div class="card-img">
+                        <img src="./assets/sample-flower-image.png" alt="Flower image">
+                    </div>
+                    <div class="card-detailes">
+                        <h6 class="inter">Lily Blossom</h6>
+                        <h5 class="inter">20 USD</h5>
+                        <a href=""><button class="inter btn-primary">ADD TO CART</button></a>
+                    </div>
+                </div>
+                <div class="card card-7">
+                    <div class="card-img">
+                        <img src="./assets/sample-flower-image.png" alt="Flower image">
+                    </div>
+                    <div class="card-detailes">
+                        <h6 class="inter">Lily Blossom</h6>
+                        <h5 class="inter">20 USD</h5>
+                        <a href=""><button class="inter btn-primary">ADD TO CART</button></a>
+                    </div>
+                </div>
+                  <div class="card card-8">
+                    <div class="card-img">
+                        <img src="./assets/sample-flower-image.png" alt="Flower image">
+                    </div>
+                    <div class="card-detailes">
+                        <h6 class="inter">Lily Blossom</h6>
+                        <h5 class="inter">20 USD</h5>
+                        <a href=""><button class="inter btn-primary">ADD TO CART</button></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Plants section end -->
     </main>
 
     <footer>
