--- a/index.html
+++ b/index.html
@@ -142,6 +142,23 @@
             </div>
         </section>
         <!-- Plants section end -->
+        <!-- Plants lover section start --> 
+        <section class="plant-lover-section">
+            <div class="plant-lover">
+                <div >
+                    <img src="./assets/flower-store.png" alt="plant-lover-img"class="plant-lover-img">
+                </div>
+                <div class="plant-lover-content">
+                    <h1 class="noto-serif">Flower & Plants Lover</h1>
+                    <ul class="inter">
+                            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        </ul>
+                </div>
+            </div>
+        </section>
+        <!-- Plants lover section end --> 
     </main>
 
     <footer>
