--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
         <!-- Plants section end -->
         <!-- Plants lover section start --> 
         <section class="plant-lover-section">
+            
             <div class="plant-lover">
-                <div >
+                <div class="">
                     <img src="./assets/flower-store.png" alt="plant-lover-img"class="plant-lover-img">
+                    <img src="./assets/trusted-badge.png" alt="" class="badge">
                 </div>
                 <div class="plant-lover-content">
                     <h1 class="noto-serif">Flower & Plants Lover</h1>
