--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <section class="plant-lover-section">
             
             <div class="plant-lover">
-                <div class="">
+                <div class="badge-cantainaer">
                     <img src="./assets/flower-store.png" alt="plant-lover-img"class="plant-lover-img">
                     <img src="./assets/trusted-badge.png" alt="" class="badge">
                 </div>
@@ -161,6 +161,17 @@
             </div>
         </section>
         <!-- Plants lover section end --> 
+        <!-- Join section start --> 
+         <section class="join-section">
+            <div class="join-section-content">
+                <h1 class="noto-serif">Join the colorful Bunch</h1>
+                <form>
+                    <input type="email" placeholder="Write email" required><button type="submit" class=" inter join-btn">Subscribe</button>
+                    
+                </form>
+            </div>
+         </section>
+        <!-- Join section end --> 
     </main>
 
     <footer>
