--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
         </section>
         <!-- Plants lover section end --> 
         <!-- Join section start --> 
-         <section class="join-section">
-            <div class="join-section-content">
+         <section class="join-container">
+            <form class="join-form">
                 <h1 class="noto-serif">Join the colorful Bunch</h1>
-                <form>
-                    <input type="email" placeholder="Write email" required><button type="submit" class=" inter join-btn">Subscribe</button>
-                    
-                </form>
-            </div>
-         </section>
+                <div class="inter">
+                    <input type="email" placeholder="write email" required>
+                    <button class="subscribe-button">Subscribe</button>
+                </div>
+            </form>
+        </section>
         <!-- Join section end --> 
     </main>
 
