--- a/index.html
+++ b/index.html
@@ -160,7 +160,37 @@
                 </div>
             </div>
         </section>
-        <!-- Plants lover section end --> 
+        <!-- Plants lover section end -->
+        <!--Promo section start  -->
+        <section>
+        <div class="promo-content">
+            <h1 class="noto-serif "><span class="colour">Latest</span> Deals</h1>
+            <p class="inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+        <div class="promo-container">
+            <div class="left-promos ">
+                <div class="promo-item" style="background-image: url(./assets/deal-bloom.png);">
+                    <div class="promo-text ">
+                        <h3>60% Off | Bloom Plant</h3>
+                        <a href="#" class="shop-now-btn" >Shop Now</a>
+                    </div>
+                </div>
+                <div class="promo-item" style="background-image: url(./assets/deal-ana.png);">
+                    <div class="promo-text">
+                        <h3>30% Off | Ana Plant</h3>
+                        <a href="#" class="shop-now-btn" >Shop Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="right-promo " style="background-image: url(./assets/deal-zabo.png);">
+                <div class="promo-text">
+                    <h2>25% Off | <strong>Zabo Plant</strong></h2>
+                    <a href="#" class="shop-now-btn" >Shop Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+        <!--Promo section end  -->
         <!-- Join section start --> 
          <section class="join-container">
             <form class="join-form">
